[gd_scene load_steps=3 format=3 uid="uid://drh25t5yg05ve"]

[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://icon.svg" id="1_hvhij"]
[ext_resource type="Script" uid="uid://behnplj43lkoe" path="res://scenes/game_systems/cycling/cycling_technique_selector/cycling_technique_slot.gd" id="1_rvmc6"]

[node name="CyclingTechniqueSlot" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_rvmc6")

[node name="CyclingTechniquePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CyclingTechniquePanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CyclingTechniquePanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="CyclingTechniqueIcon" type="TextureRect" parent="CyclingTechniquePanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_hvhij")

[node name="CyclingTechniqueInfo" type="RichTextLabel" parent="CyclingTechniquePanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Technique[/b]
Madra/sec: 0.0
Duration: 0 s
"
